# ShareXin

./: CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE  Makefile  PKGBUILD  README.md  io.github.ShareXin.json  old_changelog.md  sharexin-fedora
data/: io.github.ShareXin.appdata.xml.in  io.github.ShareXin.desktop.in  tmpwrap
data/gtk/: dialog.ui
lang/: cn.yml  de.yml  en.yml  eo.yml  es.yml  fr.yml  ja.yml  ko.yml  pl.yml  pt.yml  sv.yml  tr.yml  tw.yml
man/: sharexin.1
pkg/AUR/: PKGBUILD  install.sh
pkg/AUR/sharexin/: PKGBUILD
pkg/AUR/sharexin-git/: PKGBUILD  install.sh
pkg/AppImage/: AppRun  appimage.sh  sharexin.desktop
resources/: io.github.ShareXin.appdata.xml  io.github.ShareXin.desktop  ui.glade~
resources/gtk/: ui.glade
shell/: completions.bash  completions.zsh
src/: auth.glade  auth.rs  cmd.rs  desktop.rs  dialog.rs  error.rs  file.rs  gui.rs  help.rs  image.rs  imgur.rs  language.rs  lib.rs  main.rs  mastodon.rs  mort.rs  notification.rs  save.rs  screenshot.rs  send.rs  service.rs  sharexin.glade  systray.rs  text.rs  tray.rs  twitter.rs  upgrade.rs
src/lang/: cn.yml  de.yml  en.yml  eo.yml  es.yml  fr.yml  ja.yml  ko.yml  pl.yml  pt.yml  tw.yml
systray-rs/: Cargo.toml
systray-rs/libappindicator-rs/: Cargo.toml
systray-rs/libappindicator-rs/examples/: libappindicator-example.rs
systray-rs/libappindicator-rs/libappindicator-sys/: Cargo.toml  build.rs  wrapper.h
systray-rs/libappindicator-rs/libappindicator-sys/src/: lib.rs
systray-rs/libappindicator-rs/src/: lib.rs
systray-rs/src/: lib.rs
systray-rs/src/api/: mod.rs
systray-rs/src/api/linux/: mod.rs
