[package]
name = "sharexin"
version = "0.6.6"
authors = ["TheBitStick <thebitstick@tfwno.gf>"]
description = "ShareX for Linux and FreeBSD"
homepage = "https://sharexin.github.io"
repository = "https://github.com/ShareXin/ShareXin"
keywords = ["twitter", "mastodon", "imgur", "gtk", "linux"]
license = "MIT"
include = ["src/lang/*", "Cargo.toml", "src/*"]
readme = "README.md"

[dependencies]
gtk = { version = "0.5.0", features = ["v3_22"] }
gdk = { version = "0.9.0", features = ["v3_22"] }
openssl = {version = "0.10.13", features = ["vendored"]}
glib = "0.6.0"
time = "0.1.40"
open = "1.2.2"
curl = "0.4.18"
imgur = "0.7.0"
notify-rust = "3.4.3"
yaml-rust = "0.4.2"
clipboard = "0.5.0"
clap = "2.32.0"
egg-mode = "0.12.0"
egg-mode-text = "1.14.7"
mammut = "0.11.0"
screenshot-rs = "0.1.1"