[package]
name = "sharexin"
version = "0.6.8"
authors = ["TheBitStick <thebitstick@tfwno.gf>"]
description = "ShareX for Linux and FreeBSD"
homepage = "https://sharexin.github.io"
repository = "https://github.com/ShareXin/ShareXin"
keywords = ["twitter", "mastodon", "imgur", "gtk", "linux"]
license = "GPL"
include = ["lang/*", "Cargo.toml", "resources/gtk/ui.glade"]
readme = "README.md"

[[bin]]
name = "sharexin"
path = "src/main.rs"

[dependencies]
gtk = { version = "0.5.0", features = ["v3_18"] }
gdk = { version = "0.9.0", features = ["v3_18"] }
glib = "0.6.0"
time = "0.1.40"
open = "1.2.2"
imgur = "0.7.0"
notify-rust = "3.5.0"
yaml-rust = "0.4.2"
clipboard = "0.5.0"
clap = "2.32.0"
egg-mode-text = "1.14.7"
screenshot-rs = "0.1.1"